# DigiCron

./: .gitignore  .gitmodules  CMakeLists.txt  CNAME  README.md  build.sh  platformio.ini
applib/: digicron-stdlib.cpp  digicron.h  digicron.syms
apps/: build.sh
apps/counter/: app.cpp  counterscreen.cpp  counterscreen.h
apps/test/: app.cpp
apptest/: api.h  api.syms  app.cpp  app.wasm  app.wasm.h  build.sh
common/: datatypes.h
firmware/: _api.cpp  _api.h  api.cpp  api.h  console.cpp  console.h  datatypes.cpp  datatypes.h  display.cpp  display.h  home.cpp  home.h  input.cpp  input.h  main.cpp  mainmenu.cpp  mainmenu.h  power.cpp  power.h  proc.cpp  proc.h  test.cpp  test.h  time.cpp  time.h  timing.cpp  timing.h  ui.cpp  ui.h
firmware/common/: console.cpp  console.h  datatypes.cpp  datatypes.h  display.cpp  display.h  ui.cpp  ui.h
hardware/: #auto_saved_files#  DigiCron.kicad_pcb  DigiCron.kicad_pro  DigiCron.kicad_sch  fp-lib-table  sym-lib-table  ~DigiCron.kicad_pcb.lck
hardware/lib/ADXL345/: 2024-12-11_22-39-53.kicad_sym
hardware/lib/ADXL345/footprints.pretty/: LGA_CC-14-1_ADI-L.kicad_mod  LGA_CC-14-1_ADI-M.kicad_mod  LGA_CC-14-1_ADI.kicad_mod
hardware/lib/HCMS-x91x/: 2024-09-23_21-18-26.kicad_sym
hardware/lib/HCMS-x91x/footprints.pretty/: DIP26_HCMS-290X-B_BRA.kicad_mod
hardware/lib/LTR390/: 2024-12-11_22-26-57.kicad_sym
hardware/lib/LTR390/footprints.pretty/: SMD6_LTR-390UV-01_LTO-L.kicad_mod  SMD6_LTR-390UV-01_LTO-M.kicad_mod  SMD6_LTR-390UV-01_LTO.kicad_mod
simulator/: index.html  script.js  style.css
tools/api/: api.sh  builder.sh  digicron-callables.h  digicron-stdlib.h
